[gd_scene load_steps=2 format=3 uid="uid://mr7sf7cqvljt"]

[ext_resource type="Script" path="res://Main_menu.gd" id="1_4gfxc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4gfxc")

[node name="MenuContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -113.0
offset_right = 113.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="Border" type="ColorRect" parent="MenuContainer"]
layout_mode = 2
color = Color(0.360784, 0.501961, 0.690196, 1)

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Background" type="ColorRect" parent="MenuContainer/MarginContainer"]
layout_mode = 2
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OptionButton" type="OptionButton" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Start" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Quit" type="Button" parent="MenuContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="item_selected" from="MenuContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MenuContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
